# models_comparator

./: .gitignore  README.md  api.py  api_call.rest  compare.py  data.csv  data_example.txt  data_original.csv  dbscan_model.joblib  explore.py  gb_model.joblib  gb_model.pkl  index.html  knn_model.pkl  main.py  mlp_model.joblib  mlp_model.pkl  pyproject.toml  scaler.joblib  svm_model.joblib  svm_model.pkl
models/: __init__.py  compare.py  dbscan_model.py  gradient_boosting_model.py  knn_model.py  lstm_model.py  mlp_model.py  random_forest_model.py  sarima_model.py  svm_model.py  transformers.py
