[project]
name = "tesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "ruff>=0.11.7",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]
