[project]
name = "tesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "keras>=3.9.2",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
    "ruff>=0.11.7",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.2",
]

[tool.ruff]
line-length = 80
indent-width = 2
